fix: center aligned

--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,11 @@
 @import './index.css';
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+
 .btb-container {
   display: flex;
   flex-direction: column;
